--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .flexbox{
@@ -18,8 +19,9 @@
 header{
     max-width: 1920px;
     min-height: 80px;
-    background-color: #add8e6;
-    padding-top: 1em;
+    background-image: url(../img/jumbo.png);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .navbar{
@@ -27,49 +29,102 @@ header{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    min-height: 44px;
-    background-color: goldenrod;
+    min-height: 80px;
+    background-color: #3161e0;
 }
 
 .headerbox{
     padding: 1em;
     font-size: 1em;
+    justify-content: space-between;
 }
 
-.logo, .link, .login{
+.logo{
     height: 1,5em;
-    width: calc(100% / 3);
+    width: 15%;
+    text-align: center;
+    justify-content: space-around;
 }
 
+.logo > img{
+    padding: 1em;
+}
 .link{
+    width: 50%;
     text-align: center;
+    justify-content: space-around;
+    color: #fefeff;
+    font-size: 1em;
 }
 
 .login{
-    text-align: right;
+    width: 15%;
+    height: 1,5em;
 }
-
-.border{
-    border: 2px dashed black;
+.LogButton{
+    color: black;
+    text-align: right;
+    background-color: white;
+    border: 5px solid white;
+    border-radius: 13px;
 }
 
 .bluebox{
-    background-color: #00008B;
     max-width: 1920px;
     min-height: 500px;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    margin: auto;
 }
 
 .pinkbox{
-    background-color: #EE82EE;
-    display: flex;
-    align-items: center;
-    min-height: 400px;
-    min-width: 900px;
-    justify-content: center;
-    margin: auto;
-    border: 1px dashed black;
+    min-width: 60rem;
+    min-height: 18.75rem;
 }
 
+.intro{
+    padding: 50px;
+    margin: 0 auto;
+}
+h1{
+    color: white;
+    font-size: 3rem;
+    text-align: center;
+    justify-content: center;
+    padding: 1em;
+}
+.text{
+    color: white;
+    font-size: 1.5rem;
+    font-weight: lighter;
+    text-align: center;
+    justify-content: center;
+    padding: 30px;
+}
+
+.chooseBut{
+    font-size: 15px;
+    text-align: center;
+    justify-content: space-evenly;
+    
+}
+
+.chooseLeft{
+    background-color: white;
+    color: black;
+    border: 10px solid white;
+    border-radius: 20px;
+    width: 200px;
+}
+
+.chooseRight{
+    color: white;
+    width: 260px;
+    background-color: black;
+    border: 10px solid black;
+    border-radius: 20px
+}
 
 /* Proprietà Corpo del Layout */
 main > div{
