--- a/css/style.css
+++ b/css/style.css
@@ -141,17 +141,35 @@ main > div{
 }
 
 .bbox{
-    background-color: #1E90FF;
+    background-color: transparent;
     width: 700px;
-    height: 490px;
-    border: 1px dashed black;   
+    height: 490px;   
 }
 
 .bpink{
-    background-color: #FFC0CB;
+    background-color: transparent;
     width: 473px;
     height: 490px;
-    border: 1px dashed black;
+    padding: 40px;
+}
+.sidetext{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 50px;
+    font-weight: bold;
+    text-align: left;
+}
+
+.dscpt{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 20px
+    text-align: left;
+    margin-top: 25px;
+    padding: 10px;
+    line-height: 1.6;
 }
 
 .grey{
@@ -159,11 +177,37 @@ main > div{
 }
 
 .bgreen{
-    background-color: #228B22;
+    background-color: transparent;
     width: 1190px;
     height: 905px;
     margin: auto;
-    border: 1px dashed black;
+    
+}
+
+.LastTitle{
+    color: black;
+    font-size: 45px;
+    text-align: center;
+}
+
+.lastparagraph{
+    color: black;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.center{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+}
+.imgContainer{
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    color: black;
 }
 
 /* Proprietà Parte Finale Layout */
