--- a/css/style.css
+++ b/css/style.css
@@ -206,8 +206,16 @@ main > div{
 .imgContainer{
     text-align: center;
     justify-content: center;
-    align-items: center;
+    align-content: center;
     color: black;
+}
+.download{
+    color: white;
+    font-size: 1rem;
+    margin-top: 25px;
+    border: 20px solid #8ea1e1;
+    background-color: #8ea1e1;
+    border-radius: 30px;
 }
 
 /* Proprietà Parte Finale Layout */
