--- a/css/style.css
+++ b/css/style.css
@@ -220,32 +220,64 @@ main > div{
 
 /* Proprietà Parte Finale Layout */
 footer{
-    border-top: 1px solid #D6D7D7;
-    border-bottom: 1px solid #D6D7D7;
     background-color: #23272A;
 }
 
-
 .footerTopLeft{
-    background-color: pink;
     width: 361px;
     height: 579px;
-    border: 2px dashed black;
+}
+.Ending{
+    margin: 30px;
+    font-size: 35px;
+    color: #7289da;
+}
+
+#ita{
+    width: 35px;
+    height: 21px;
+    margin-left: 30px;
+}
+.selectbox{
+    border: none;
+    background-color: #23272A;
+    color: white;
+    margin-left: 2px;
+}
+.social{
+    margin-top: 20px;
+    justify-content: left;
+    color: whitesmoke;
 }
 
 .footerTopRight{
     display: flex;
-    background-color: #20B2AA;
     width: calc(100% - 361px);
-    border: 1px solid black;
 }
 
 .colonna{
     height: 580px;
     width: 25%;
-    border: 2px dashed white;
 }
 
+h3{
+    margin: 30px;
+    font-size: 15px;
+    color: #7289da;
+
+}
+li{
+    list-style: none;
+    line-height: 0.5;
+    margin: 30px;
+    font-size: 15px;
+    font-weight: 500;
+    color: whitesmoke;
+}
+
+hr{
+    border: 1px solid #fefeff;
+}
 
 .footerBottom{
     background-color:#23272A;
