--- a/css/style.css
+++ b/css/style.css
@@ -63,13 +63,15 @@ header{
 }
 .LogButton{
     color: black;
-    font-size: 1em;
+    font-size: 10px
     text-align: right;
     background-color: white;
     border: 10px solid white;
     border-radius: 25px;
 }
-
+.button:hover{
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
 .bluebox{
     max-width: 1920px;
     min-height: 500px;
