--- a/css/style.css
+++ b/css/style.css
@@ -63,11 +63,13 @@ header{
 }
 .LogButton{
     color: black;
-    font-size: 10px
-    text-align: right;
     background-color: white;
+    font-size: 16px;
+    text-align: right;
     border: 10px solid white;
     border-radius: 25px;
+    font-size: 10px
+    
 }
 .button:hover{
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
@@ -168,11 +170,11 @@ main > div{
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 20px
     text-align: left;
     margin-top: 25px;
     padding: 10px;
     line-height: 1.6;
+    font-size: 20px
 }
 
 .grey{
