--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
 }
 
 .flexbox{
